[gd_scene format=3 uid="uid://b28skb43spsl2"]

[ext_resource type="Script" uid="uid://7fa7ncy71rcp" path="res://scenes/objects/pyre.gd" id="1_7epyt"]
[ext_resource type="Texture2D" uid="uid://bjnbhknu81iwj" path="res://graphics/objects/Pyre Sheet.png" id="1_vaprf"]
[ext_resource type="Texture2D" uid="uid://pt1ve4fs7eda" path="res://graphics/objects/Pyre0.png" id="2_ac8kh"]
[ext_resource type="Texture2D" uid="uid://6htihb83y05q" path="res://graphics/tilesets/light texture.PNG" id="2_ehmvm"]
[ext_resource type="Texture2D" uid="uid://k4r0km103lsj" path="res://graphics/ui/v_bar.png" id="4_2ykkb"]
[ext_resource type="PackedScene" uid="uid://b1a4cl0kv3lpw" path="res://scenes/vfx/flash_sprite_2d.tscn" id="4_k8vn0"]
[ext_resource type="Shader" uid="uid://b6nm5dtkeitqy" path="res://shaders/flash.tres" id="5_02tvp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ehmvm"]
atlas = ExtResource("1_vaprf")
region = Rect2(0, 0, 65, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_7epyt"]
atlas = ExtResource("1_vaprf")
region = Rect2(65, 0, 65, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ykkb"]
atlas = ExtResource("1_vaprf")
region = Rect2(130, 0, 65, 74)

[sub_resource type="SpriteFrames" id="SpriteFrames_ac8kh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehmvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7epyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ykkb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k8vn0"]
resource_local_to_scene = true
shader = ExtResource("5_02tvp")
shader_parameter/Color = Color(1, 1, 1, 1)
shader_parameter/Progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ehmvm"]
radius = 63.0

[node name="Pyre" type="StaticBody2D" unique_id=619828489 groups=["Pyres"]]
y_sort_enabled = true
collision_layer = 4
collision_mask = 8
script = ExtResource("1_7epyt")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1368255943]
visible = false
position = Vector2(-0.19999695, -7.199997)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ac8kh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1413525050]
position = Vector2(-0.19999695, -7.199997)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ac8kh")
autoplay = "default"

[node name="FlashSprite2D" parent="." unique_id=1425081756 instance=ExtResource("4_k8vn0")]
material = SubResource("ShaderMaterial_k8vn0")
position = Vector2(-0.19999695, -7.199997)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ac8kh")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." unique_id=1669671412]
polygon = PackedVector2Array(-7, -7, 7, -7, 15, 7, 9, 10, -6, 10, -13, 8)

[node name="Area2D" type="Area2D" parent="." unique_id=1365646536]
position = Vector2(-0.19999695, -13.199997)
collision_layer = 4
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=565279134]
shape = SubResource("CircleShape2D_ehmvm")

[node name="PointLight2D" type="PointLight2D" parent="." unique_id=1649821778]
position = Vector2(1, -13)
texture = ExtResource("2_ehmvm")
texture_scale = 0.4

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=579372879]
offset_left = -10.199997
offset_top = -32.199997
offset_right = 9.800003
offset_bottom = -27.199997

[node name="TextureProgressBar" type="TextureProgressBar" parent="PanelContainer" unique_id=394623701]
layout_mode = 2
nine_patch_stretch = true
texture_under = ExtResource("4_2ykkb")
texture_progress = ExtResource("4_2ykkb")
tint_progress = Color(1, 1, 0, 1)

[node name="FuelTimer" type="Timer" parent="." unique_id=791687118]
wait_time = 60.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="FuelTimer" to="." method="_on_fuel_timer_timeout"]
